[package]
name = "cron-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
# common = { git = "https://github.com/openchronology/rust-common.git", rev = "a3b4a40b" }
common = { path = "../../common" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
