[package]
name = "filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-proxy = "0.2.0"
actix-web = "4.3.1"
anyhow = "1.0.75"
awc = "3.1.1"
# common = { git = "https://github.com/openchronology/rust-common.git", rev = "a3b4a40b" }
common = { path = "../../common" }
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.105"
