[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common = { git = "https://github.com/openchronology/rust-common.git", rev = "a3b4a40b" }
common = { path = "../../common" }
async-channel = "1.9.0"
futures = "0.3.28"
num-bigint = { version = "0.4.3", features = ["quickcheck", "rand", "arbitrary", "serde"] }
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.16"
quickcheck = "1.0.3"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
statistical = "1.0.0"
tokio = { version = "1.30.0", features = ["full", "rt"] }
color-print = "0.3.4"
hmac = "0.12.1"
sha2 = "0.10.7"
jwt = "0.16.0"
anyhow = "1.0.75"

[dev-dependencies]
quickcheck_macros = "1.0.0"
